--- a/package.json
+++ b/package.json
@@ -32,5 +32,9 @@
     "gulp-util": "^3.0.7",
     "gulp-watch": "^4.3.8",
     "harp": "^0.20.3"
+  },
+	"dependencies": {
+    "aos": "^2.1.1",
+    "smoothscroll-polyfill": "^0.3.4"
   }
 }
